first build and launch. need to lang

--- a/src/main/resources/assets/imbued_deco/lang/en_us.json
+++ b/src/main/resources/assets/imbued_deco/lang/en_us.json
@@ -1,3 +1,7 @@
 {
-	"item.amethyst_imbuement.furious_scepter": "Furious Scepter"
+	"item.imbued_deco.todo": "Todo",
+
+	"block.imbued_deco.todo": "Todo",
+
+	"itemGroup.imbued_deco.id_group": "Imbued Deco"
 }
