start on recipes and add shine light lanterns

--- a/src/main/resources/assets/imbued_deco/lang/en_us.json
+++ b/src/main/resources/assets/imbued_deco/lang/en_us.json
@@ -1,7 +1,64 @@
 {
 	"item.imbued_deco.todo": "Todo",
 
-	"block.imbued_deco.todo": "Todo",
+	"block.imbued_deco.hard_light_stairs": "Hard Light Stairs",
+	"block.imbued_deco.crystallized_light_stairs_white": "White Crystallized Light Stairs",
+	"block.imbued_deco.crystallized_light_stairs_light_gray": "Light Gray Crystallized Light Stairs",
+	"block.imbued_deco.crystallized_light_stairs_gray": "Gray Crystallized Light Stairs",
+	"block.imbued_deco.crystallized_light_stairs_black": "Black Crystallized Light Stairs",
+	"block.imbued_deco.crystallized_light_stairs_brown": "Brown Crystallized Light Stairs",
+	"block.imbued_deco.crystallized_light_stairs_red": "Red Crystallized Light Stairs",
+	"block.imbued_deco.crystallized_light_stairs_orange": "Orange Crystallized Light Stairs",
+	"block.imbued_deco.crystallized_light_stairs_yellow": "Yellow Crystallized Light Stairs",
+	"block.imbued_deco.crystallized_light_stairs_lime": "Lime Crystallized Light Stairs",
+	"block.imbued_deco.crystallized_light_stairs_green": "Green Crystallized Light Stairs",
+	"block.imbued_deco.crystallized_light_stairs_cyan": "Cyan Crystallized Light Stairs",
+	"block.imbued_deco.crystallized_light_stairs_light_blue": "Light Blue Crystallized Light Stairs",
+	"block.imbued_deco.crystallized_light_stairs_blue": "Blue Crystallized Light Stairs",
+	"block.imbued_deco.crystallized_light_stairs_purple": "Purple Crystallized Light Stairs",
+	"block.imbued_deco.crystallized_light_stairs_magenta": "Magenta Crystallized Light Stairs",
+	"block.imbued_deco.crystallized_light_stairs_pink": "Pink Crystallized Light Stairs",
+	"block.imbued_deco.hard_light_slab": "Hard Light Slab",
+	"block.imbued_deco.crystallized_light_slab_white": "White Crystallized Light Slab",
+	"block.imbued_deco.crystallized_light_slab_light_gray": "Light Gray Crystallized Light Slab",
+	"block.imbued_deco.crystallized_light_slab_gray": "Gray Crystallized Light Slab",
+	"block.imbued_deco.crystallized_light_slab_black": "Black Crystallized Light Slab",
+	"block.imbued_deco.crystallized_light_slab_brown": "Brown Crystallized Light Slab",
+	"block.imbued_deco.crystallized_light_slab_red": "Red Crystallized Light Slab",
+	"block.imbued_deco.crystallized_light_slab_orange": "Orange Crystallized Light Slab",
+	"block.imbued_deco.crystallized_light_slab_yellow": "Yellow Crystallized Light Slab",
+	"block.imbued_deco.crystallized_light_slab_lime": "Lime Crystallized Light Slab",
+	"block.imbued_deco.crystallized_light_slab_green": "Green Crystallized Light Slab",
+	"block.imbued_deco.crystallized_light_slab_cyan": "Cyan Crystallized Light Slab",
+	"block.imbued_deco.crystallized_light_slab_light_blue": "Light Blue Crystallized Light Slab",
+	"block.imbued_deco.crystallized_light_slab_blue": "Blue Crystallized Light Slab",
+	"block.imbued_deco.crystallized_light_slab_purple": "Purple Crystallized Light Slab",
+	"block.imbued_deco.crystallized_light_slab_magenta": "Magenta Crystallized Light Slab",
+	"block.imbued_deco.crystallized_light_slab_pink": "Pink Crystallized Light Slab",
+	"block.imbued_deco.hard_light_pane": "Hard Light Pane",
+	"block.imbued_deco.crystallized_light_pane_white": "White Crystallized Light Pane",
+	"block.imbued_deco.crystallized_light_pane_light_gray": "Light Gray Crystallized Light Pane",
+	"block.imbued_deco.crystallized_light_pane_gray": "Gray Crystallized Light Pane",
+	"block.imbued_deco.crystallized_light_pane_black": "Black Crystallized Light Pane",
+	"block.imbued_deco.crystallized_light_pane_brown": "Brown Crystallized Light Pane",
+	"block.imbued_deco.crystallized_light_pane_red": "Red Crystallized Light Pane",
+	"block.imbued_deco.crystallized_light_pane_orange": "Orange Crystallized Light Pane",
+	"block.imbued_deco.crystallized_light_pane_yellow": "Yellow Crystallized Light Pane",
+	"block.imbued_deco.crystallized_light_pane_lime": "Lime Crystallized Light Pane",
+	"block.imbued_deco.crystallized_light_pane_green": "Green Crystallized Light Pane",
+	"block.imbued_deco.crystallized_light_pane_cyan": "Cyan Crystallized Light Pane",
+	"block.imbued_deco.crystallized_light_pane_light_blue": "Light Blue Crystallized Light Pane",
+	"block.imbued_deco.crystallized_light_pane_blue": "Blue Crystallized Light Pane",
+	"block.imbued_deco.crystallized_light_pane_purple": "Purple Crystallized Light Pane",
+	"block.imbued_deco.crystallized_light_pane_magenta": "Magenta Crystallized Light Pane",
+	"block.imbued_deco.crystallized_light_pane_pink": "Pink Crystallized Light Pane",
+
+	"block.imbued_deco.steel_stairs": "Steel Stairs",
+	"block.imbued_deco.steel_slab": "Steel Slab",
+	"block.imbued_deco.steel_bars": "Steel Bars",
+	"block.imbued_deco.cut_steel_block": "Cut Steel Block",
+	"block.imbued_deco.cut_steel_stairs": "Cut Steel Stairs",
+	"block.imbued_deco.cut_steel_slab": "Cut Steel Slab",
 
 	"itemGroup.imbued_deco.id_group": "Imbued Deco"
 }
