imbued hopper upgrades and optimization

--- a/src/main/resources/assets/imbued_deco/lang/en_us.json
+++ b/src/main/resources/assets/imbued_deco/lang/en_us.json
@@ -75,6 +75,7 @@
 	"block.imbued_deco.cut_steel_block": "Cut Steel Block",
 	"block.imbued_deco.cut_steel_stairs": "Cut Steel Stairs",
 	"block.imbued_deco.cut_steel_slab": "Cut Steel Slab",
+	"block.imbued_deco.imbued_hopper": "Imbued Hopper",
 
 	"container.imbued_hopper": "Imbued Item Hopper",
 
