--- a/src/main/resources/assets/imbued_deco/lang/en_us.json
+++ b/src/main/resources/assets/imbued_deco/lang/en_us.json
@@ -76,6 +76,8 @@
 	"block.imbued_deco.cut_steel_stairs": "Cut Steel Stairs",
 	"block.imbued_deco.cut_steel_slab": "Cut Steel Slab",
 	"block.imbued_deco.imbued_hopper": "Imbued Hopper",
+	"block.imbued_deco.placeable_potion": "Potion",
+	"block.imbued_deco.tiny_cauldron": "Tiny Cauldron",
 
 	"container.imbued_hopper": "Imbued Item Hopper",
 
