tweaks for release

--- a/src/main/resources/assets/imbued_deco/lang/en_us.json
+++ b/src/main/resources/assets/imbued_deco/lang/en_us.json
@@ -53,6 +53,7 @@
 	"block.imbued_deco.crystallized_light_pane_magenta": "Magenta Crystallized Light Pane",
 	"block.imbued_deco.crystallized_light_pane_pink": "Pink Crystallized Light Pane",
 	"block.imbued_deco.shine_light_lantern": "Shine Light Lantern",
+	"block.imbued_deco.shine_light_rainbow_lantern": "Rainbow Shine Light Lantern",
 	"block.imbued_deco.shine_light_white_lantern": "White Shine Light Lantern",
 	"block.imbued_deco.shine_light_light_gray_lantern": "Light Gray Shine Light Lantern",
 	"block.imbued_deco.shine_light_gray_lantern": "Gray Shine Light Lantern",
